Add custom styling

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,7 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+
+//Custom Style
+@import './custom'
