--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,5 +10,8 @@
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
+//Bootstrap Switch
+@import './bootstrap-switch';
+
 //Custom CSS
 @import './custom';
