Change primary color

--- a/resources/sass/bootstrap-switch.scss
+++ b/resources/sass/bootstrap-switch.scss
@@ -41,7 +41,7 @@
     background-color: #444;
   }
   input.primary:checked + .slider {
-    background-color: #6f42c1;
+    background-color: #4e73df;
   }
   input.success:checked + .slider {
     background-color: #8bc34a;
