Set styling for home page bg

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -72,3 +72,13 @@
 .fas{
     line-height: inherit !important;
 }
+
+//Home Page
+#home_bg{
+    opacity: 0.1;
+    background-image: url('/public/images/home_bg.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    height: 100%;
+}
